--- a/music/templates/music/manager_dashboard.html
+++ b/music/templates/music/manager_dashboard.html
@@ -391,7 +391,7 @@
                 <div class="action-icon">🔍</div>
                 <h3>Пошук талантів</h3>
                 <p>Знайдіть нових перспективних артистів</p>
-                <a href="{% url 'music:music_search' %}" class="action-btn">Шукати</a>
+                <a href="{% url 'music:artist_search' %}" class="action-btn">Шукати</a>
             </div>
             <div class="action-card">
                 <div class="action-icon">💼</div>
